--- a/pom.xml
+++ b/pom.xml
@@ -11,13 +11,16 @@
     the right dependencies for modules specified for each version separately -->
   <profiles>
     <profile>
-      <id>scala-2.12</id>
+      <id>scala-2.13</id>
       <activation>
         <activeByDefault>true</activeByDefault>
       </activation>
       <properties>
-        <scala.version>2.12.7</scala.version>
-        <scala.compat.version>2.12</scala.compat.version>
+        <scala.version>2.13.3</scala.version>
+        <scala.compat.version>2.13</scala.compat.version>
+        <hamcrest.version>2.2</hamcrest.version>
+        <hamcrest-all.version>1.3</hamcrest-all.version>
+        <junit.version>4.12</junit.version>
       </properties>
       <dependencies>
           <dependency>
@@ -28,18 +31,43 @@
           <dependency>
             <groupId>org.scala-lang.modules</groupId>
             <artifactId>scala-xml_${scala.compat.version}</artifactId>
-            <version>1.1.1</version>
+            <version>2.0.0-M1</version>
           </dependency>
           <dependency>
             <groupId>org.scala-lang.modules</groupId>
             <artifactId>scala-parser-combinators_${scala.compat.version}</artifactId>
-            <version>1.1.1</version>
+            <version>1.1.2</version>
           </dependency>
           <dependency>
             <groupId>org.scala-lang.modules</groupId>
             <artifactId>scala-swing_${scala.compat.version}</artifactId>
-            <version>2.0.3</version>
+            <version>2.1.1</version>
           </dependency>
+        <dependency>
+          <groupId>antlr-java</groupId>
+          <artifactId>library</artifactId>
+          <version>1.0</version>
+          <systemPath>/Users/andrea/git/antlr-java/target/antlr-1-jar-with-dependencies.jar</systemPath>
+          <scope>system</scope>
+        </dependency>
+        <dependency>
+          <groupId>org.hamcrest</groupId>
+          <artifactId>hamcrest</artifactId>
+          <version>${hamcrest.version}</version>
+          <scope>test</scope>
+        </dependency>
+        <dependency>
+          <groupId>org.hamcrest</groupId>
+          <artifactId>hamcrest-all</artifactId>
+          <version>${hamcrest-all.version}</version>
+          <scope>test</scope>
+        </dependency>
+        <dependency>
+          <groupId>junit</groupId>
+          <artifactId>junit</artifactId>
+          <version>${junit.version}</version>
+          <scope>test</scope>
+        </dependency>
       </dependencies>
     </profile>
     <profile>
