--- a/pom.xml
+++ b/pom.xml
@@ -68,6 +68,16 @@
           <version>${junit.version}</version>
           <scope>test</scope>
         </dependency>
+        <dependency>
+          <groupId>com.github.scopt</groupId>
+          <artifactId>scopt_${scala.compat.version}</artifactId>
+          <version>4.0.0-RC2</version>
+        </dependency>
+        <dependency>
+          <groupId>io.spray</groupId>
+          <artifactId>spray-json_${scala.compat.version}</artifactId>
+          <version>1.3.5</version>
+        </dependency>
       </dependencies>
     </profile>
   </profiles>
