--- a/pom.xml
+++ b/pom.xml
@@ -1,9 +1,10 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
-  <groupId>sample</groupId>
+  <groupId>org.racerdfix</groupId>
   <artifactId>RacerDFix</artifactId>
   <version>1.0</version>
+  <packaging>jar</packaging>
   <properties>
     <encoding>UTF-8</encoding>
   </properties>
@@ -21,6 +22,7 @@
         <hamcrest.version>2.2</hamcrest.version>
         <hamcrest-all.version>1.3</hamcrest-all.version>
         <junit.version>4.12</junit.version>
+        <antlr.version>4.8</antlr.version>
       </properties>
       <dependencies>
           <dependency>
@@ -44,11 +46,9 @@
             <version>2.1.1</version>
           </dependency>
         <dependency>
-          <groupId>antlr-java</groupId>
-          <artifactId>library</artifactId>
+          <groupId>org.racerdfix.antlr</groupId>
+          <artifactId>antlr</artifactId>
           <version>1.0</version>
-          <systemPath>/Users/andrea/git/antlr-java/target/antlr-1-jar-with-dependencies.jar</systemPath>
-          <scope>system</scope>
         </dependency>
         <dependency>
           <groupId>org.hamcrest</groupId>
@@ -90,6 +90,58 @@
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-compiler-plugin</artifactId>
         <version>3.3</version>
+      </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-dependency-plugin</artifactId>
+        <executions>
+          <execution>
+            <id>copy-dependencies</id>
+            <phase>prepare-package</phase>
+            <goals>
+              <goal>copy-dependencies</goal>
+            </goals>
+            <configuration>
+              <outputDirectory>
+                ${project.build.directory}/libs
+              </outputDirectory>
+            </configuration>
+          </execution>
+        </executions>
+      </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-jar-plugin</artifactId>
+        <version>3.2.0</version>
+        <configuration>
+          <archive>
+            <manifest>
+              <mainClass>org.racerdfix.RacerDFix</mainClass>
+            </manifest>
+          </archive>
+        </configuration>
+      </plugin>
+      <plugin>
+        <artifactId>maven-assembly-plugin</artifactId>
+        <configuration>
+          <archive>
+            <manifest>
+              <mainClass>org.racerdfix.RacerDFix</mainClass>
+            </manifest>
+          </archive>
+          <descriptorRefs>
+            <descriptorRef>jar-with-dependencies</descriptorRef>
+          </descriptorRefs>
+        </configuration>
+        <executions>
+          <execution>
+            <id>make-assembly</id> <!-- this is used for inheritance merges -->
+            <phase>package</phase> <!-- bind to the packaging phase -->
+            <goals>
+              <goal>single</goal>
+            </goals>
+          </execution>
+        </executions>
       </plugin>
       <plugin>
           <groupId>org.codehaus.mojo</groupId>
