--- a/CONFIG.json
+++ b/CONFIG.json
@@ -1,6 +1,7 @@
 {"infer":"/Users/andrea/git/infer-clean/infer/infer/bin/infer",
   "options":["--racerdfix-only", "--starvation"],
   "json_path": "./infer-out/",
-  "target_options": ["--", "javac", "src/test/java/airline/Bug.java"],
-  "prio_files":  []
+  "target_options": ["--", "javac", "src/test/java/alarmclock/AlarmClock.java"],
+  "prio_files":  [],
+  "iterations": 5
 }
