--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ scala:
   - 2.13.3
 
 before_install:
-  - brew install autoconf automake cmake opam pkg-config sqlite gmp mpfr
+#  - brew install autoconf automake cmake opam pkg-config sqlite gmp mpfr
   - brew cask install java
   - git clone git@github.com:andrecostea/infer.git
   - cd infer
