--- a/.travis.yml
+++ b/.travis.yml
@@ -8,8 +8,8 @@ scala:
 
 before_install:
 #  - brew install autoconf automake cmake opam pkg-config sqlite gmp mpfr
-  - brew cask install java
-  - git clone git@github.com:andrecostea/infer.git
+#  - brew cask install java
+  - git clone https://github.com/andrecostea/infer.git
   - cd infer
   - ./build-infer.sh java
   - make install
