--- a/CONFIG.json
+++ b/CONFIG.json
@@ -1,8 +1,8 @@
 {"infer":"/Users/andrea/git/infer-clean/infer/infer/bin/infer",
   "options":["--racerdfix-only", "--starvation"],
   "json_path": "./infer-out/",
-  "target_options": ["--", "javac", "src/test/java/Hello.java"],
+  "target_options": ["--", "javac", "src/test/java/Deadlock-paper/Hello.java"],
   "prio_files":  [],
   "iterations": 5,
-  "racerdfix_options": []
+  "hippodrome_options": []
 }
