--- a/CONFIG.json
+++ b/CONFIG.json
@@ -1,7 +1,6 @@
-{"infer":"/Users/andrea/git/infer-clean/infer/infer/bin/infer",
-  "options":["--racerdfix-only", "--starvation", "--no-deduplicate"],
+{
   "json_path": "./infer-out/",
-  "target_options": ["--", "javac", "/Users/andrea/git/racerdfix/src/test/java/Deadlock-paper/Hello.java"],
+  "target_options": ["--", "javac", "src/test/java/datarace/CustomerInfo.java","src/test/java/datarace/Account.java"],
   "prio_files":  [],
   "iterations": 5,
   "hippodrome_options": []
