--- a/CONFIG.json
+++ b/CONFIG.json
@@ -1,6 +1,6 @@
 {
   "json_path": "./infer-out/",
-  "target_options": ["--", "javac", "src/test/java/datarace/CustomerInfo.java","src/test/java/datarace/Account.java"],
+  "target_options": ["--", "javac", "src/test/java/datarace/CustomerInfo.java","src/test/java/datarace/Account.java", "-d", "target"],
   "prio_files":  [],
   "iterations": 5,
   "hippodrome_options": []
