add annotation dependency for the intellij plugin

--- a/pom.xml
+++ b/pom.xml
@@ -78,6 +78,12 @@
           <artifactId>spray-json_${scala.compat.version}</artifactId>
           <version>1.3.5</version>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/com.facebook.infer.annotation/infer-annotation -->
+        <dependency>
+          <groupId>com.facebook.infer.annotation</groupId>
+          <artifactId>infer-annotation</artifactId>
+          <version>0.18.0</version>
+        </dependency>
       </dependencies>
     </profile>
   </profiles>
